# GArgs

./: CMakeLists.txt  README.md  build.sh
include/: GArgs.hpp
include/GArgs/: Argument.hpp  Arguments.hpp  ArgumentsParser.hpp  FlagKey.hpp  GArgs.hpp  Parser.hpp  Structure.hpp  Version.hpp
include/GArgs-Core/: ArgumentsException.hpp
include/GArgs-Help/: Argument.hpp  CommandKey.hpp  FlagKey.hpp  Key.hpp  Structure.hpp
include/GArgs-Parser/: ArgumentsParser.hpp
src/GArgs/: Arguments.cpp  ArgumentsException.cpp  ArgumentsParser.cpp  CMakeLists.txt  CommandKey.cpp  FlagKey.cpp  Parser.cpp  Structure.cpp
src/GArgs-Core/: ArgumentsException.cpp  CMakeLists.txt
src/GArgs-Help/: CMakeLists.txt  CommandKey.cpp  FlagKey.cpp  Key.cpp  Structure.cpp
src/GArgs-Parser/: ArgumentsParser.cpp  CMakeLists.txt
src/tests/: CMakeLists.txt  main.cpp
